style(capsule-tabs): fixed content text wrap

--- a/src/components/capsule-tabs/capsule-tabs.less
+++ b/src/components/capsule-tabs/capsule-tabs.less
@@ -48,5 +48,6 @@
   }
   &-content {
     padding: 12px;
+    word-wrap: break-word;
   }
 }
